environment setup completed

--- a/src/_layout.twig
+++ b/src/_layout.twig
@@ -7,7 +7,7 @@
     <title>Max Portfolio</title>
 </head>
 <body class="">
+    {% include './templates/side.twig' %}
     <div class="main"></div>
-    <div class="side"></div>
 </body>
 </html>
