--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @import "variables.scss";
 @import "fonts.scss";
-
+@import "side.scss";
 
 body {
     font-family: "Roboto-Regular", sans-serif;
